@@ -1,3 +1,6 @@
+20-03-08 Xavier Perseguers <xavier@perseguers.ch>
+	* added retrieval and use of page author's name/email
+
 20-02-08 Xavier Perseguers <xavier@perseguers.ch>
 	* added support for multilingual feeds
 
